fix : added display property

--- a/src/frontend/components/sidebar/sidebar.css
+++ b/src/frontend/components/sidebar/sidebar.css
@@ -45,3 +45,9 @@
         display: flex;
     }
 }
+
+@media  screen and (min-width: 64.063em) and (max-width: 90em) {
+    .sidebarDisplay{
+        display: flex;
+    }
+}
