--- a/src/frontend/components/navbar/navbar.css
+++ b/src/frontend/components/navbar/navbar.css
@@ -1,10 +1,6 @@
 
 
 .header{
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
     min-height: 4.063rem;
     background-color: var(--color-background);
     color: var(--color-foreground);
@@ -12,6 +8,11 @@
 }
 
 .header-container{
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
