--- a/src/frontend/components/textEditor/TextEditor.css
+++ b/src/frontend/components/textEditor/TextEditor.css
@@ -1,6 +1,7 @@
 
 .main-textEditor{
     margin-top: 0.938rem;
+    align-self: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -11,52 +12,29 @@
     background-color: var(--color-background-accent);
     color: var(--color-foreground);
     padding: .5rem;
-    border: 1px solid var(--color-foreground-accent);
     border-radius: 5px; 
     gap: 1rem;
+    box-shadow:  rgb(0 0 0 / 16%) 0px 3px 6px, rgb(0 0 0 / 23%) 0px 3px 6px
 }
 
 .text-editor-title{
     outline: none;
-    width: 100%;
+    width: 94%;
     margin-left: 13px;
 }
 .text-editor-title::placeholder{
     color: var(--color-foreground);
 }
-.quill{
-    display: flex;
-    flex-direction: column-reverse;
-    gap: 1rem;
-}
-
-.quill .ql-toolbar.ql-snow {
-    box-sizing: border-box;
-    font-family: inherit;
-    padding: .5rem;
-    border: 0;
-    background-color: var(--gray-200);
-    border-radius: 8px;
-}
-
-.ql-snow .ql-editor.ql-blank::before{
-    color: var(--color-foreground);
-    font-style: normal;
-}
-
-.quill .ql-container.ql-snow{
-    border: 0;
-}
 
 
 .btn-container{
     display: flex;
-    justify-content: flex-start;
-    gap: .5rem;
+    justify-content: space-between;
     width: 100%;
 }
+
 .icon-btn{
-    background-color: var(--color-background-accent);
+    background-color:inherit ;
 }
 .icon-btn:hover{
     background-color: var(--color-background);
@@ -68,10 +46,19 @@
     left: 40px;
     padding: 1rem .5rem;
     top: 6px;
-    background-color: var(--color-background-accent);
+    background-color:#8e9292;
     border: 1px solid var(--color-foreground-accent);
     border-radius: 4px;
     display: flex;
+}
+.active-color-btn{
+    height: 1.2rem;
+    width: 1.2rem;
+    margin: 4px;
+    background-color: var(--gray-200);
+    border: 2px solid var(--color-foreground-accent);
+    border-radius: 50%;
+   
 }
 .color-btn{
     height: 1.2rem;
@@ -83,7 +70,7 @@
 
 .label-tooltip{
     position: absolute;
-    right: 9.8rem;
+    right: 17.8rem;
     padding: 1rem .5rem;
     top: 7px;
     width: 8rem;
@@ -94,6 +81,8 @@
     flex-wrap: wrap;
     gap: 12px;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .label-input {
@@ -107,5 +96,4 @@
     height: auto;
     margin-left: 5px;
 }
-
 
