--- a/src/frontend/screens/notes/Notes.css
+++ b/src/frontend/screens/notes/Notes.css
@@ -6,4 +6,19 @@
 
 .main-screen{
     padding: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.note-card-container{
+     column-gap: 1rem;
+     column-width: 20rem;
+}   
+
+@media screen and (min-width: 40.063em) and (max-width: 64em) {
+    .note-card-container{
+        column-width: 16rem;
+    }
 }
