fix : action button tool tips

--- a/src/frontend/components/textEditor/TextEditor.css
+++ b/src/frontend/components/textEditor/TextEditor.css
@@ -70,9 +70,8 @@
 
 .label-tooltip{
     position: absolute;
-    right: 17.8rem;
     padding: 1rem .5rem;
-    top: 7px;
+    top: 3rem;
     width: 8rem;
     background-color: var(--color-background-accent);
     border: 1px solid var(--color-foreground-accent);
