feat : added date and sort by date

--- a/src/frontend/components/navbar/navbar.css
+++ b/src/frontend/components/navbar/navbar.css
@@ -117,8 +117,8 @@
     top: 2rem;
     right: 0rem;
     display: flex;
+    flex-direction: column;
     padding: 10px;
-    justify-content: space-between;
 }
 
 .priority-label{
