--- a/src/frontend/screens/home/home.css
+++ b/src/frontend/screens/home/home.css
@@ -1,4 +1,43 @@
 
+
+.homepage-container{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    flex-direction: column;
+    gap: 1.2rem;
+    padding: 1rem;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+}
+
+.homepage-title{
+    font-size: 3rem;
+    line-height: 1;
+    color: var(--color-foreground);
+}
+
+.homepage-content{
+    line-height: 1;
+    color: var(--color-foreground);
+}
+
+.homepage-primary-btn{
+    padding:.5rem;
+    text-align: center;
+    background-color: #58d65f;
+    border: 1px solid var(--green-600);
+    color: var(--white);
+    font-weight: 500;
+    border-radius: 2px;
+}
+
+.homepage-primary-btn:hover{
+    transition: .4s all;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 5px, rgba(0, 0, 0, 0.23) 0px 2px 5px;
+}
+
 .main-container{
     display: flex;
 }
@@ -7,6 +46,3 @@
     flex-grow: 1;
 }
 
-.m-16{
-    margin: 16rem;
-}
